--- a/appsettings.json
+++ b/appsettings.json
@@ -9,6 +9,6 @@
   "AllowedHosts": "*",
 
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost;Database=studymentor;Uid=root;Pwd=chris123;"
+    "DefaultConnection": "Server=bm4x61azebhoy6dvv1j3-mysql.services.clever-cloud.com;Database=bm4x61azebhoy6dvv1j3;User=usqyo3egfzawmqko;Password=pATODXsRw9ry6UG6gkhn;"
   }
 }
